--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-حسبي الله ونعم الوكيل
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Extractor</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header class="bg-gray-800 text-white p-4">
+        <nav class="flex justify-between items-center">
+            <h1 class="text-2xl font-bold">Data Extractor</h1>
+            <ul class="flex space-x-4">
+                <li><a href="#features" class="hover:underline">Features</a></li>
+                <li><a href="#pricing" class="hover:underline">Pricing</a></li>
+                <li><a href="#about" class="hover:underline">About</a></li>
+                <li><a href="#contact" class="hover:underline">Contact</a></li>
+            </ul>
+            <a href="#demo" class="bg-blue-500 px-4 py-2 rounded text-white">Book a Demo</a>
+        </nav>
+    </header>
+    <section class="bg-blue-600 text-white text-center p-20">
+        <h1 class="text-5xl font-bold">Unlock the Power of Your Data</h1>
+        <p class="mt-4 text-xl">Extract, analyze, and visualize your data effortlessly.</p>
+        <a href="#demo" class="mt-6 inline-block bg-white text-blue-600 px-6 py-3 rounded-full font-semibold">Book a Demo</a>
+    </section>
+    <section id="features" class="p-10">
+        <h2 class="text-3xl font-bold text-center mb-6">Features</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Feature 1</h3>
+                <p>Description of feature 1.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Feature 2</h3>
+                <p>Description of feature 2.</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Feature 3</h3>
+                <p>Description of feature 3.</p>
+            </div>
+            <!-- Add more features as needed -->
+        </div>
+    </section>
+    <section id="testimonials" class="bg-gray-100 p-10">
+        <h2 class="text-3xl font-bold text-center mb-6">Testimonials</h2>
+        <div class="flex flex-col space-y-6">
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <p class="italic">"This service transformed our data strategy!"</p>
+                <p class="font-bold">- Customer Name</p>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <p class="italic">"Amazing features and user-friendly interface."</p>
+                <p class="font-bold">- Another Customer</p>
+            </div>
+        </div>
+    </section>
+    <section id="pricing" class="p-10">
+        <h2 class="text-3xl font-bold text-center mb-6">Pricing</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Basic Plan</h3>
+                <p>$29/month</p>
+                <p>Basic features included.</p>
+                <a href="#demo" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded">Choose Plan</a>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Pro Plan</h3>
+                <p>$49/month</p>
+                <p>Advanced features included.</p>
+                <a href="#demo" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded">Choose Plan</a>
+            </div>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Enterprise Plan</h3>
+                <p>Contact us for pricing</p>
+                <p>Custom solutions tailored to your needs.</p>
+                <a href="#demo" class="mt-4 inline-block bg-blue-500 text-white px-4 py-2 rounded">Choose Plan</a>
+            </div>
+        </div>
+    </section>
+    <section id="demo" class="bg-blue-600 text-white text-center p-10">
+        <h2 class="text-3xl font-bold">Ready to Get Started?</h2>
+        <p class="mt-4">Book a demo today to see our service in action!</p>
+        <a href="#contact" class="mt-6 inline-block bg-white text-blue-600 px-6 py-3 rounded-full font-semibold">Book a Demo</a>
+    </section>
+    <footer class="bg-gray-800 text-white p-4 text-center">
+        <p>&copy; 2024 Data Extractor. All rights reserved.</p>
+        <div class="mt-4">
+            <a href="#" class="mx-2 hover:underline">Facebook</a>
+            <a href="#" class="mx-2 hover:underline">Twitter</a>
+            <a href="#" class="mx-2 hover:underline">LinkedIn</a>
+        </div>
+    </footer>
+                    
+</body>
+</html>
