--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Extractor</title>
+    <title>SpyCe</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="bg-gray-800 text-white p-4">
         <nav class="flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Data Extractor</h1>
+            <h1 class="text-2xl font-bold">SpyCe</h1>
             <ul class="flex space-x-4">
                 <li><a href="#features" class="hover:underline">Features</a></li>
                 <li><a href="#pricing" class="hover:underline">Pricing</a></li>
