--- a/index.html
+++ b/index.html
@@ -395,15 +395,12 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/team-1.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Yussof Waleed Gomaa</h4>
                 <span>Chief Executive Officer</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/yussofwaleed"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -413,33 +410,15 @@
             <div class="member">
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Nour Ashraf Hanafy</h4>
+                <span>Project Manager</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/nourashrafhanafy/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
 
         </div>
 
@@ -462,11 +441,10 @@
 
       <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
         <div class="pricing-item">
-          <h3>Free Plan</h3>
+          <h3>Basic Plan</h3>
           <p class="description">Experience our basic features without any cost. Perfect for those just starting out or testing the waters.</p>
-          <h4><sup>$</sup>0<span> / month</span></h4>
-          <a href="#" class="cta-btn">Start a free trial</a>
-          <p class="text-center small">No credit card required</p>
+          <h4><sup>$</sup>69<span> / month</span></h4>
+          <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
           <ul>
             <li><i class="bi bi-check"></i> <span>Access to core features</span></li>
             <li><i class="bi bi-check"></i> <span>Limited storage options</span></li>
@@ -482,11 +460,10 @@
       <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
         <div class="pricing-item featured">
           <p class="popular">Popular</p>
-          <h3>Business Plan</h3>
+          <h3>Advanced Plan</h3>
           <p class="description">Designed for growing businesses, this plan offers all essential features with additional benefits.</p>
-          <h4><sup>$</sup>29<span> / month</span></h4>
-          <a href="#" class="cta-btn">Start a free trial</a>
-          <p class="text-center small">No credit card required</p>
+          <h4><sup>$</sup>160<span> / month</span></h4>
+          <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
           <ul>
             <li><i class="bi bi-check"></i> <span>All features from the Free Plan</span></li>
             <li><i class="bi bi-check"></i> <span>Increased storage capacity</span></li>
@@ -497,14 +474,13 @@
           </ul>
         </div>
       </div><!-- End Pricing Item -->
-
+      
       <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
         <div class="pricing-item">
-          <h3>Developer Plan</h3>
+          <h3>Enterprise Plan</h3>
           <p class="description">A comprehensive plan tailored for developers needing extensive resources and support.</p>
-          <h4><sup>$</sup>49<span> / month</span></h4>
-          <a href="#" class="cta-btn">Start a free trial</a>
-          <p class="text-center small">No credit card required</p>
+          <h4><sup>$</sup>1800<span> / month</span></h4>
+          <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
           <ul>
             <li><i class="bi bi-check"></i> <span>All features from the Business Plan</span></li>
             <li><i class="bi bi-check"></i> <span>Unlimited storage</span></li>
@@ -669,8 +645,6 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
           </ul>
         </div>
 
