--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/team-2.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nour Ashraf Hanafy</h4>
                 <span>Project Manager</span>
