--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 </section><!-- /Features Section -->
 
     <!-- Stats Section -->
-    <section id="stats" class="stats section light-background">
+    <section id="stats" class="stats section light-background" style="display: none;">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
