--- a/index.html
+++ b/index.html
@@ -439,55 +439,64 @@
 
     <div class="row gy-4">
 
-      <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+      <div class="col-lg-3" data-aos="zoom-in" data-aos-delay="100">
         <div class="pricing-item">
-          <h3>Basic Plan</h3>
+          <h3>Free Plan</h3>
           <p class="description">Experience our basic features without any cost. Perfect for those just starting out or testing the waters.</p>
-          <h4><sup>$</sup>69<span> / month</span></h4>
+          <h4><sup>$</sup>0<span> / month</span></h4>
           <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
           <ul>
-            <li><i class="bi bi-check"></i> <span>Access to core features</span></li>
-            <li><i class="bi bi-check"></i> <span>Limited storage options</span></li>
-            <li><i class="bi bi-check"></i> <span>Community support available</span></li>
-            <li class="na"><i class="bi bi-x"></i> <span>Advanced analytics</span></li>
-            <li class="na"><i class="bi bi-x"></i> <span>Priority customer support</span></li>
-            <li class="na"><i class="bi bi-x"></i> <span>Custom integrations</span></li>
-            <li class="na"><i class="bi bi-x"></i> <span>Team collaboration tools</span></li>
+            <li><i class="bi bi-check"></i> <span>Access 10 Queries a Day</span></li>
+
           </ul>
         </div>
       </div><!-- End Pricing Item -->
 
-      <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+      <div class="col-lg-3" data-aos="zoom-in" data-aos-delay="100">
+        <div class="pricing-item">
+          <h3>Basic Plan</h3>
+          <p class="description">Experience our basic features without any cost. Perfect for those just starting out or testing the waters.</p>
+          <h4><sup>$</sup>99.99<span> / month</span></h4>
+          <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
+          <ul>
+            <li><i class="bi bi-check"></i> <span>Access Free Features</span></li>
+            <li><i class="bi bi-check"></i> <span>Up to 500 Queries a Day</span></li>
+            <li><i class="bi bi-check"></i> <span>1 User Access</span></li>
+            <li><i class="bi bi-check"></i> <span>Save Product Quesries</span></li>
+            <li><i class="bi bi-check"></i> <span>Detailed Price Matrix</span></li>
+          </ul>
+        </div>
+      </div><!-- End Pricing Item -->
+
+      <div class="col-lg-3" data-aos="zoom-in" data-aos-delay="200">
         <div class="pricing-item featured">
           <p class="popular">Popular</p>
           <h3>Advanced Plan</h3>
           <p class="description">Designed for growing businesses, this plan offers all essential features with additional benefits.</p>
-          <h4><sup>$</sup>160<span> / month</span></h4>
+          <h4><sup>$</sup>149.99<span> / month</span></h4>
           <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
           <ul>
-            <li><i class="bi bi-check"></i> <span>All features from the Free Plan</span></li>
-            <li><i class="bi bi-check"></i> <span>Increased storage capacity</span></li>
-            <li><i class="bi bi-check"></i> <span>Advanced analytics tools</span></li>
-            <li><i class="bi bi-check"></i> <span>Priority customer support</span></li>
-            <li><i class="bi bi-check"></i> <span>Collaboration features for teams</span></li>
-            <li class="na"><i class="bi bi-x"></i> <span>Custom integrations</span></li>
+            <li><i class="bi bi-check"></i> <span>All Basic Plan Features</span></li>
+            <li><i class="bi bi-check"></i> <span>Up to 1000 Queries a Day</span></li>
+            <li><i class="bi bi-check"></i> <span>3 User Access</span></li>
+            <li><i class="bi bi-check"></i> <span>See Products Historical Price Change</span></li>
+            <li><i class="bi bi-check"></i> <span>Price Change Alerts in App</span></li>
+            <li><i class="bi bi-check"></i> <span>CSV Export</span></li>
           </ul>
         </div>
       </div><!-- End Pricing Item -->
       
-      <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+      <div class="col-lg-3" data-aos="zoom-in" data-aos-delay="300">
         <div class="pricing-item">
           <h3>Enterprise Plan</h3>
-          <p class="description">A comprehensive plan tailored for developers needing extensive resources and support.</p>
-          <h4><sup>$</sup>1800<span> / month</span></h4>
+          <p class="description">A comprehensive plan tailored for enterprises needing extensive resources and support.</p>
+          <h4><sup>$</sup>349.99<span> / month</span></h4>
           <a href="https://docs.google.com/forms/d/1h2F7gJzj_LEiV9-5Urc2msBMoOFUpQ5Iw0oVkXg27r4/edit" class="cta-btn">Book A Demo</a>
           <ul>
-            <li><i class="bi bi-check"></i> <span>All features from the Business Plan</span></li>
-            <li><i class="bi bi-check"></i> <span>Unlimited storage</span></li>
-            <li><i class="bi bi-check"></i> <span>Custom integrations</span></li>
-            <li><i class="bi bi-check"></i> <span>Advanced security features</span></li>
-            <li><i class="bi bi-check"></i> <span>Dedicated account manager</span></li>
-            <li><i class="bi bi-check"></i> <span>Access to beta features</span></li>
+            <li><i class="bi bi-check"></i> <span>All Advanced Plan Features</span></li>
+            <li><i class="bi bi-check"></i> <span>Up to 5000 Queries a Day</span></li>
+            <li><i class="bi bi-check"></i> <span>5 User Access</span></li>
+            <li><i class="bi bi-check"></i> <span>Custom Email Notifications</span></li>
           </ul>
         </div>
       </div><!-- End Pricing Item -->
