--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 </section><!-- /Details Section -->
 
     <!-- Team Section -->
-    <section id="team" class="team section">
+    <section id="team" class="team section" style="display: none;">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
